--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node ./app.js",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/AhtashamMustafa/JavaScript-Assignment/issues"
   },
-  "homepage": "https://github.com/AhtashamMustafa/JavaScript-Assignment#readme"
+  "homepage": "https://github.com/AhtashamMustafa/JavaScript-Assignment#readme",
+  "dependencies": {
+    "node": "^20.7.0"
+  }
 }
